Efter att ha dräpt Superbuggen den Förskräcklige vårstädade Sir Kodalot